x-overflow fix (amend v2)
AMEND:
fix only needs to be applied to body, putting it on all .container, produces unintended effects to AOS entries

AMEND 2:
still overflows on smaller screens with previous amend, so it is not set to hide overflow for all containers only on smaller screens, but still hides body overflow for any screen-size.

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -188,6 +188,10 @@ footer {
     #head-shot-col {
         display: none;
     }
+
+    .container {
+        overflow-x: hidden !important; /*fixes overflow on small screens without ruining animations on larger screens*/
+    }
 }
 
 @media (min-width: 768px) {
